couchpotato/couchpotato-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: couchpotato
  name: couchpotato
  namespace: mediaserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: couchpotato
    spec:
      containers:
      - image: linuxserver/couchpotato
        name: couchpotato
        ports:
        - containerPort: 5050
        resources: {}
        volumeMounts:
        - mountPath: /movies
          name: media
        - mountPath: /downloads
          name: couchpotato-data
        - mountPath: /config
          name: couchpotato-config
      restartPolicy: Always
      volumes:
      - name: media
        nfs:
          server: 192.168.178.33
          path: "/volume2/film2"
      - name: couchpotato-data
        nfs:
          server: 192.168.178.33
          path: "/volume1/openflixr/movies"
      - name: couchpotato-config
        nfs:
          server: 192.168.178.33
          path: "/volume1/openflixr/couchpotato-config"
status: {}
