couchpotato/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: couchpotato
  namespace: mediaserver
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: couchpotato.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: couchpotato
          servicePort: 5050
